added download resume button and upddated accent color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
 
     /* Primary Palette */
     --primary: #0699ab; /* Kept */
+    --primary-700: #097b8a; /* Kept */
 
     /* Secondary Palette */
     --secondary: #7ed159; /* Kept */
